[gd_scene load_steps=2 format=3 uid="uid://xfmck5c8cyg8"]

[ext_resource type="Script" path="res://assets/debug/debug.gd" id="1_y68yy"]

[node name="Debug" type="Node"]
process_mode = 3
script = ExtResource("1_y68yy")

[node name="Window" type="Window" parent="."]
title = "Debug"
position = Vector2i(16, 64)
size = Vector2i(313, 184)
min_size = Vector2i(100, 100)

[node name="Control" type="Control" parent="Window"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Window/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 70

[node name="ItemList" type="ItemList" parent="Window/Control/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
item_0/text = "Info"
item_1/text = "Main"
item_2/text = "Cheats"

[node name="TabContainer" type="TabContainer" parent="Window/Control/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
tabs_visible = false

[node name="Info" type="Control" parent="Window/Control/HSplitContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Window/Control/HSplitContainer/TabContainer/Info"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="Window/Control/HSplitContainer/TabContainer/Info/MarginContainer"]
layout_mode = 2
text = "test"

[node name="Main" type="Control" parent="Window/Control/HSplitContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Cheats" type="Control" parent="Window/Control/HSplitContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Window/Control/HSplitContainer/TabContainer/Cheats"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Window/Control/HSplitContainer/TabContainer/Cheats/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Window/Control/HSplitContainer/TabContainer/Cheats/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Fly"

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="item_selected" from="Window/Control/HSplitContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="Window/Control/HSplitContainer/TabContainer/Cheats/MarginContainer/VBoxContainer/Button" to="." method="_on_fly_pressed"]
